ТЗ 08-2 Блок "Подарок"

--- a/index.html
+++ b/index.html
@@ -288,39 +288,59 @@
                 </tbody>
 
             </table>
-            <p style="margin: 30px auto 0; max-width: 540px;">
+            <p style="margin: 30px auto 0; max-width: 540px;margin-bottom: 188px;">
 
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam nulla amet, incidunt in dicta possimus
                 expedita fuga excepturi consequatur consequuntur soluta qui, aliquid porro veritatis maiores ducimus.
                 Itaque, minus magnam.
             </p>
         </div>
+    </div>
 
-        <div>
-
+    <div class="block05">
+        
+        <div class="block05__shadow"></div>
+        <div class="block05__bg">
+            <img src="images/present.jpg" alt="">
+        </div>
+        <div class="container3">
+            <div class="block05__present">
+                <img class="block05__img" src="images/news 1.jpg" alt="">
+            </div>
             <div id="a_gift_to_everyone"></div>
-            <div>Подарок каждому</div>
-            <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus ex facilis in. Aliquid minus rerum vero
+            <div class="block05__descr">
+            <div class="block05__text1">Подарок каждому</div>
+            <div class="block05__text2">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus ex facilis in. Aliquid minus
+                rerum
+                vero
                 iusto, maiores neque aperiam laudantium corporis vitae nostrum, tempore labore doloribus nam
                 perspiciatis
                 velit.
-                Quasi, laborum vel nisi, excepturi in dolorum nihil mollitia odit odio ipsum facere aliquam totam maxime
-                veritatis consequuntur magni id. Vel expedita reprehenderit eius ipsam corporis ex ratione fugiat
+                Quasi, laborum vel nisi, excepturi in dolorum nihil mollitia odit odio ipsum facere aliquam
+                totam
+                maxime
+                veritatis consequuntur magni id. Vel expedita reprehenderit eius ipsam corporis ex ratione
+                fugiat
                 magnam!
-                Inventore perspiciatis recusandae quidem sit assumenda, nesciunt, necessitatibus quas nostrum hic
+                Inventore perspiciatis recusandae quidem sit assumenda, nesciunt, necessitatibus quas nostrum
+                hic
                 ducimus
                 modi a quae rem quibusdam culpa expedita fugit eum saepe quam suscipit. Saepe praesentium dolore
                 adipisci
                 eaque aperiam.
                 Repellat, molestiae quisquam iste earum mollitia neque quidem quos vitae excepturi a sunt soluta
                 voluptates
-                hic dignissimos! Deleniti harum facere quisquam omnis quam nisi sed consequuntur in ratione. Fuga,
+                hic dignissimos! Deleniti harum facere quisquam omnis quam nisi sed consequuntur in ratione.
+                Fuga,
                 iusto!
-            </p>
-            <span>Получить подарок</span>
+            </div>
         </div>
-
+            <div class="block05__text3">Получить подарок</div>
+        </div>
+   
+    </div>
+    <div class="container3">
         <div id="films"></div>
         <h4>Фильмы</h4>
         <p>
@@ -459,6 +479,7 @@
                 </div>
             </div>
         </div>
+
 
     </div>
     </div>
