ТЗ 08-3 Блок "Отзывы"

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         </a>
                     </div>
                     <nav>
-                        <ul class="block02__menu">
+                        <ul class="block01__menu">
                             <div class="line1">
                                 <li><a class="line1 link-white" href="tel:+78003551256">+7 (800) 355 12-56</a></li>
                                 <li><a class="line1 link-white" href="mailto:kino@innopolis.ru">kino@innopolis.ru</a>
@@ -80,22 +80,20 @@
             </div>
         </div>
     </div>
-    <div>
-        <span><strong>Добро пожаловать</strong></span>
+    <div class="block02">
+        <div class="block02__descr">
 
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore culpa fugit cum error veniam maxime alias
-            voluptate quaerat vitae id est autem, eveniet rem ut magni maiores voluptatem vel eligendi?
-            Totam similique aliquid deserunt recusandae, ipsum mollitia, doloremque doloribus sequi architecto
-            blanditiis accusamus laboriosam, porro nemo iusto! A iure natus atque, assumenda, incidunt suscipit eos ut
-            distinctio deleniti mollitia omnis.
-            Eius, alias, quis beatae ducimus laboriosam minus natus quas quisquam dignissimos nihil facilis asperiores
-            consequatur aliquid temporibus atque doloremque hic unde, est quo culpa consequuntur nisi perferendis
-            nesciunt ratione? Quia.
-            Ullam doloribus architecto exercitationem error eos? Nam odit quaerat, perspiciatis hic sunt aperiam
-            voluptas corporis fugit quasi ipsa ab consequatur, vero vel cupiditate! A rem nihil eaque minima mollitia
-            aliquam.
-        </p>
+            <div class="block02__text1"><strong>Добро пожаловать</strong></div>
+
+            <div class="block02__text2">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem ab accusantium deleniti soluta possimus
+                magnam saepe minus! Obcaecati, consectetur illum! Consequatur commodi minus nostrum explicabo, provident
+                assumenda molestiae deserunt aliquid!
+                Earum maiores quaerat autem rerum incidunt. Aperiam natus, ex cupiditate quod repellat quaerat corporis
+                expedita incidunt, in iste possimus consequuntur, perspiciatis nemo laboriosam sunt? Est sapiente
+                aspernatur culpa blanditiis rerum?
+            </div>
+        </div>
     </div>
     <div class="container3">
         <h2>Почему мы?</h2>
@@ -296,49 +294,45 @@
             </p>
         </div>
     </div>
+    <div class="block-present">
+        <div class="container3 block-present__wrap">
 
-    <div class="block05">
-        
-        <div class="block05__shadow"></div>
-        <div class="block05__bg">
-            <img src="images/present.jpg" alt="">
+            <img class="block-present__img" src="images/news 1.jpg" alt="">
         </div>
+    </div>
+    <div class="block05">
         <div class="container3">
-            <div class="block05__present">
-                <img class="block05__img" src="images/news 1.jpg" alt="">
-            </div>
             <div id="a_gift_to_everyone"></div>
             <div class="block05__descr">
-            <div class="block05__text1">Подарок каждому</div>
-            <div class="block05__text2">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus ex facilis in. Aliquid minus
-                rerum
-                vero
-                iusto, maiores neque aperiam laudantium corporis vitae nostrum, tempore labore doloribus nam
-                perspiciatis
-                velit.
-                Quasi, laborum vel nisi, excepturi in dolorum nihil mollitia odit odio ipsum facere aliquam
-                totam
-                maxime
-                veritatis consequuntur magni id. Vel expedita reprehenderit eius ipsam corporis ex ratione
-                fugiat
-                magnam!
-                Inventore perspiciatis recusandae quidem sit assumenda, nesciunt, necessitatibus quas nostrum
-                hic
-                ducimus
-                modi a quae rem quibusdam culpa expedita fugit eum saepe quam suscipit. Saepe praesentium dolore
-                adipisci
-                eaque aperiam.
-                Repellat, molestiae quisquam iste earum mollitia neque quidem quos vitae excepturi a sunt soluta
-                voluptates
-                hic dignissimos! Deleniti harum facere quisquam omnis quam nisi sed consequuntur in ratione.
-                Fuga,
-                iusto!
+                <div class="block05__text1">Подарок каждому</div>
+                <div class="block05__text2">
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus ex facilis in. Aliquid minus
+                    rerum
+                    vero
+                    iusto, maiores neque aperiam laudantium corporis vitae nostrum, tempore labore doloribus nam
+                    perspiciatis
+                    velit.
+                    Quasi, laborum vel nisi, excepturi in dolorum nihil mollitia odit odio ipsum facere aliquam
+                    totam
+                    maxime
+                    veritatis consequuntur magni id. Vel expedita reprehenderit eius ipsam corporis ex ratione
+                    fugiat
+                    magnam!
+                    Inventore perspiciatis recusandae quidem sit assumenda, nesciunt, necessitatibus quas nostrum
+                    hic
+                    ducimus
+                    modi a quae rem quibusdam culpa expedita fugit eum saepe quam suscipit. Saepe praesentium dolore
+                    adipisci
+                    eaque aperiam.
+                    Repellat, molestiae quisquam iste earum mollitia neque quidem quos vitae excepturi a sunt soluta
+                    voluptates
+                    hic dignissimos! Deleniti harum facere quisquam omnis quam nisi sed consequuntur in ratione.
+                    Fuga,
+                    iusto!
+                </div>
+                <button class="block05__text3">Получить подарок</button>
             </div>
         </div>
-            <div class="block05__text3">Получить подарок</div>
-        </div>
-   
     </div>
     <div class="container3">
         <div id="films"></div>
@@ -519,79 +513,54 @@
             </div>
         </div>
     </div>
-    <h6><strong>Отзывы</strong></h6>
-    <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad libero consequuntur consectetur, minima
-        suscipit quam quas! Suscipit aspernatur obcaecati iste officiis. Inventore cumque doloribus nostrum
-        repellendus delectus quaerat sequi iusto.
-        Optio pariatur doloribus nam, nemo corporis earum ipsam deleniti reprehenderit explicabo, accusantium
-        asperiores suscipit praesentium ea, quod necessitatibus. Tempore quidem doloribus corporis, temporibus
-        nemo
-        et ipsum blanditiis quasi! Veritatis, quidem!
-        Obcaecati, totam ratione! Officiis accusamus libero vero, facilis aspernatur similique obcaecati
-        doloremque
-        itaque sapiente sequi quos nobis soluta corporis nam iure repudiandae facere eum et eos esse molestias
-        dolorem sint!
-        Iure voluptatem ut nobis quidem hic in quia placeat doloremque perferendis ipsam nam, et ducimus vitae
-        distinctio aut! Recusandae ipsa non reprehenderit, dicta accusantium laborum eveniet quas exercitationem
-        eos
-        sit.
-    </p>
-    <span>Елена Еленова</span>
-    <P>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus facilis temporibus itaque tempore
-        debitis
-        sapiente, perspiciatis quis ullam enim amet exercitationem velit voluptatem odio dolor molestiae
-        praesentium
-        quos ex esse.
-        Explicabo veritatis iste beatae, autem, similique ullam praesentium laboriosam aliquid, atque quas ipsa
-        corporis quibusdam. Magnam corporis nisi nihil similique ab sit aliquam sequi, saepe ex voluptatibus
-        numquam
-        ducimus vitae.
-        Assumenda, odio ex. Eius in neque sed architecto? Ad, illo, possimus commodi a distinctio placeat ipsam
-        itaque impedit enim quae voluptatum accusantium repellat, aliquid optio corrupti. Molestias, rem! Ipsum,
-        ad.
-        Fuga, tempora. Fugiat quasi incidunt atque blanditiis rerum ducimus praesentium. Quas rem dicta porro at
-        veritatis ipsam? Fugit eius tenetur veritatis excepturi aliquid? Impedit alias perferendis tempore
-        voluptate
-        vero! Alias.
-    </P>
-    <span>Борис Борисов</span>
-    <P>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo omnis sequi tenetur dicta! Ea eius
-        asperiores
-        quibusdam inventore, temporibus id velit veritatis assumenda iure pariatur excepturi aliquid, at, dolor
-        vel?
-        Itaque aut, quo, sapiente ab est explicabo ea omnis provident nobis, quidem dolores quaerat. Ut
-        aspernatur,
-        exercitationem iure aut aperiam porro eum non ab sapiente deleniti nulla voluptas eaque asperiores!
-        Eligendi nesciunt ullam beatae, architecto fugiat id dolores minima odio temporibus est culpa sit
-        voluptas
-        ipsa necessitatibus, ab non minus vitae hic? Voluptatem, adipisci molestiae! Asperiores reprehenderit
-        quia
-        sequi facilis.
-        Veniam, qui mollitia reiciendis hic repudiandae eligendi! Consequatur eligendi optio beatae voluptatem
-        eos
-        ut dolor reiciendis, corporis atque quo sequi nostrum dolores consequuntur delectus libero error. Esse
-        ratione facere in?
-    </P>
-    <span>Леонардо ДиКаприо</span>
-    <P>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, obcaecati deserunt quis hic quasi sed
-        ad
-        natus, animi sint, molestias repudiandae aspernatur commodi tempore officia soluta beatae autem
-        molestiae
-        suscipit.
-        Earum ut ipsa adipisci quidem similique id provident porro ex est sit quos minus hic aperiam sequi
-        assumenda
-        dolore nisi voluptate voluptatem ullam tenetur tempore, quo maiores nostrum impedit! Cupiditate.
-        Tempore beatae sit repellat optio, odio vel sunt ab ea sequi nisi delectus repudiandae nobis quam
-        inventore
-        facilis et nihil facere illo distinctio eaque nemo mollitia quaerat itaque? Laudantium, consequatur!
-        Labore harum ut quasi debitis voluptates earum unde libero sit, sed autem error natus fuga! Tenetur,
-        velit
-        quod. Facere perspiciatis, quis sunt repellendus et odit repudiandae amet esse explicabo facilis.
-    </P>
+    <div class="block08">
+        <div class="container3">
+            <h6><strong>Отзывы</strong></h6>
+            <div class="block08__text1">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus commodi qui explicabo ad quidem corporis
+                dolore natus tempore animi, aliquid, ea facere veniam soluta in voluptatibus doloremque voluptate quos
+                architecto?
+            </div>
+            <div class="block08__review">
+            <div class="block08__review1">
+                <div class="block08__bg1"></div>
+                <div class="block08__descr1">
+                    <div class="block08__text2">Елена Еленова</div>
+                    <div class="block08__text3">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae corporis quas quidem,
+                        veritatis rem omnis temporibus harum maxime deleniti cum animi, tempora est! Ad quia id
+                        inventore ex soluta numquam!
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="block08__review">
+            <div class="block08__review2">
+                <div class="block08__bg2"></div>
+                <div class="block08__descr2">
+                    <div class="block08__text4">Борис Борисов</div>
+                    <div class="block08__text5">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae corporis quas quidem,
+                        veritatis rem omnis temporibus harum maxime deleniti cum animi, tempora est! Ad quia id
+                        inventore ex soluta numquam!
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="block08__review">
+            <div class="block08__review3">
+                <div class="block08__bg3"></div>
+                <div class="block08__descr3">
+                    <div class="block08__text6">Леонардо Дикаприо</div>
+                    <div class="block08__text7">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae corporis quas quidem,
+                        veritatis rem omnis temporibus harum maxime deleniti cum animi, tempora est! Ad quia id
+                        inventore ex soluta numquam!
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     </div>
     </div>
     <div>
